# contrail-api-cli

./: .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
contrail_api_cli/: auth.py  command.py  completer.py  manager.py  resource.py  schema.py
contrail_api_cli/commands/: batch.py  cat.py  du.py  exec.py  kv.py  ln.py
src/contrail_api_cli/: client.py  exceptions.py  idl_parser.py  main.py  parser.py  resource.py  schema.py
src/contrail_api_cli/commands/: edit.py  ls.py
tests/: test_command.py  test_completer.py  test_parser.py  test_path.py  test_resource.py  test_schema.py  test_utils.py  utils.py
