[build-system]
requires = ['setuptools>=61.0']
build-backend = "setuptools.build_meta"

[project]
name = 'contrail-api-cli'
version = '0.5.1'
authors = [
    { name = "Jean-Philippe Braun", email = "eon@patapon.info" }
]

maintainers = [
    { name = "David-Lannion" }
]
description = "Simple CLI program to browse Contrail API server"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ['contrail', 'api', 'cli']
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Developers',
    'Topic :: Software Development :: User Interfaces',
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    #'Development Status :: 5 - Production/Stable'
    'Development Status :: 4 - Beta'
]
dependencies = [
    'setuptools>=61.0',
    'pygments>=2.15',
    'prompt_toolkit>=2',
    'keystoneauth1>=5.2',
    'requests>=2.20.0',
    'gevent>=1.3',
    'datrie>=0.8',
    'six>=1.16'
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
contrail_api_cli = ['schemas/*/*']

[project.urls]
Homepage = "https://github.com/David-Lannion/contrail-api-cli"
Repository = "https://github.com/David-Lannion/contrail-api-cli"
BugTracker = "https://github.com/David-Lannion/contrail-api-cli/issues"
origin = "http://www.github.com/eonpatapon/contrail-api-cli"

[tool.tox]
legacy_tox_ini = "tox.ini"

[project.optional-dependencies]
dev = [
    "build >=0.10",
    "twine >=4.0.2",
    "coverage>=6.5.0"
]


