[metadata]
description_file = README.md

[options.entry_points]
console_scripts =
    contrail-api-cli = contrail_api_cli.main:main
keystoneauth1.plugin =
    http = contrail_api_cli.auth:HTTPAuthLoader

contrail_api_cli.command =
    ls = contrail_api_cli.commands.ls:Ls
    cat = contrail_api_cli.commands.cat:Cat
    du = contrail_api_cli.commands.du:Du
    rm = contrail_api_cli.commands.rm:Rm
    edit = contrail_api_cli.commands.edit:Edit
    shell = contrail_api_cli.commands.shell:Shell
    tree = contrail_api_cli.commands.tree:Tree
    python = contrail_api_cli.commands.python:Python
    schema = contrail_api_cli.commands.schema:Schema
    relative = contrail_api_cli.commands.relative:Relative
    ln = contrail_api_cli.commands.ln:Ln
    exec = contrail_api_cli.commands.exec:Exec
    batch = contrail_api_cli.commands.batch:Batch
    kv = contrail_api_cli.commands.kv:Kv
    man = contrail_api_cli.commands.man:Man

contrail_api_cli.shell_command =
    cd = contrail_api_cli.commands.shell:Cd
    exit = contrail_api_cli.commands.shell:Exit
    help = contrail_api_cli.commands.shell:Help

contrail_api_cli.completer =
    resources = contrail_api_cli.resource:ResourceCache
    collections = contrail_api_cli.resource:ResourceCache
    commands = contrail_api_cli.manager:CommandManager
